--- a/init.angler.rc
+++ b/init.angler.rc
@@ -17,6 +17,7 @@
 import init.angler.usb.rc
 import init.angler.diag.rc
 import init.angler.sensorhub.rc
+import init.omni.rc
 
 on early-init
     mount debugfs debugfs /sys/kernel/debug
